# opendlv-hedgehog

./: CMakeLists.txt  Dockerfile.aarch64  Hedgehog project.docx  README.md  automower.cpp  automower_hrp.launch
Test 1/: automower_safe.cpp
Test 2/: automower_safe.cpp
Test3/: am_driver_safe_node
hrp-master/am_driver_safe/: am_driver_safe_node.cpp  automower_safe.cpp
opendlv-device-gps-nmea-7bf1b27e029b579edb232b03b58819034fad943f/: Dockerfile.amd64  Dockerfile.armhf  README.md
opendlv-device-gps-nmea-7bf1b27e029b579edb232b03b58819034fad943f/src/: nmea-decoder-constants.hpp  nmea-decoder.cpp  nmea-decoder.hpp  opendlv-device-gps-nmea.cpp
opendlv-device-gps-nmea-7bf1b27e029b579edb232b03b58819034fad943f/test/: tests-nmea-decoder.cpp
opendlv-device-hedgehog/: Automower.cpp  Motor.cpp  Motor.h  opendlv-device-hedgehog.cpp  opendlv-standard-message-set-v0.9.10.odvd
opendlv-device-hedgehog/src/: opendlv-device-hedgehog-prugw.cpp
opendlv-gw-hedgehog/src/: opendlv-gw-hedgehog.cpp  opendlv-standard-message-set-v0.9.10.odvd
opendlv-hedgehog-view/src/: CMakeLists.txt  cluon-complete-v0.0.103.hpp  rec-metadataToJSON.cpp
opendlv-hedgehog-view/webapp/css/: bootstrap-grid.css.map  bootstrap-grid.min.css.map  bootstrap-reboot.css.map
opendlv-hedgehog-view/webapp/fonts/: glyphicons-halflings-regular.eot
opendlv-logic-hedgehog/src/: behavior.cpp  behavior.hpp  opendlv-logic-hedgehog.cpp
opendlv-motor-hedgehog/: CMakeLists.txt
opendlv-motor-hedgehog/src/: opendlv-motor-hedgehog  single-track-model.cpp  single-track-model.hpp
src/: Bool_automowersafe::update  am_driver[under construction]  am_driver_safe_node.cpp  automower_safe.cpp  automower_safe_states.cpp  opendlv-custom-message-set-v0.odvd
